2002-11-19  Klee Dienes  <kdienes@apple.com>

	* h8300.h (h8_opcode): Remove 'noperands', 'idx', and 'size'
	fields.
	(h8_opcodes). Modify initializer and initializer macros to no
	longer initialize the removed fields.
	
2002-11-19  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* tic4x.h (c4x_insts): Fixed LDHI constraint

2002-11-18  Klee Dienes  <kdienes@apple.com>

	* h8300.h (h8_opcode): Remove 'length' field.
	(h8_opcodes): Mark as 'const' (both the declaration and
	definition).  Modify initializer and initializer macros to no
	longer initialize the length field.

2002-11-18  Klee Dienes  <kdienes@apple.com>

	* arc.h (arc_ext_opcodes): Declare as extern.
	(arc_ext_operands): Declare as extern.
	* i860.h (i860_opcodes): Declare as const.

2002-11-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* tic4x.h: File reordering. Added enhanced opcodes.

2002-11-16  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* tic4x.h: Major rewrite of entire file. Define instruction
	  classes, and put each instruction into a class.

2002-11-11  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* tic4x.h: Added new opcodes and corrected some bugs.  Add support
	for new DSP types.

2002-10-14  Alan Modra  <amodra@bigpond.net.au>

	* cgen.h: Test __BFD_H_SEEN__ rather than BFD_VERSION_DATE.

2002-09-30  Gavin Romig-Koch  <gavin@redhat.com>
            Ken Raeburn  <raeburn@cygnus.com>
            Aldy Hernandez  <aldyh@redhat.com>
            Eric Christopher  <echristo@redhat.com>
            Richard Sandiford  <rsandifo@redhat.com>

	* mips.h: Update comment for new opcodes.
	(OP_MASK_VECBYTE, OP_SH_VECBYTE): New.
	(OP_MASK_VECALIGN, OP_SH_VECALIGN): New.
	(INSN_4111, INSN_4120, INSN_5400, INSN_5500): New.
	(CPU_VR4120, CPU_VR5400, CPU_VR5500): New.
	(OPCODE_IS_MEMBER): Handle the new CPU_* values and INSN_* flags.
	Don't match CPU_R4111 with INSN_4100.

2002-08-19  Elena Zannoni <ezannoni@redhat.com>
 
        From matthew green  <mrg@redhat.com>
